# large-document-rag

./: .gitignore  .tool-versions  Makefile  README.md  docker-compose.yml  pairing-session.md
backend/: .env.example  .gitignore  pyproject.toml
backend/scripts/: install.sh
backend/src/: exceptions.py  main.py
backend/src/agents/: base_agent.py  document_processor_agent.py  orchestrator.py  query_agent.py
backend/src/api/: app.py  models.py  routes.py
backend/src/config/: .env.example  config.py
backend/src/document_processing/: base_processor.py  financial_document_processor.py  financial_indexer.py
backend/src/document_processing/chunking/: __init__.py  base_chunker.py  financial_chunkers.py
backend/src/finance/: __init__.py  financial_analyzer_engine.py
backend/src/finance/analysis/: __init__.py  ratio_calculator.py  time_series_analyzer.py
backend/src/finance/embeddings/: __init__.py  config.py  model.py  projection.py  tokenization.py
backend/src/finance/models/: __init__.py  statement.py
backend/src/finance/parsers/: __init__.py  base_parser.py  pdf_statement_parser.py
backend/src/llm/: financial_task_detector.py  llm_provider.py
backend/src/models/financial/: embedding_config.json  financial_terms.json  statement_structure.json
backend/src/utils/: embeddings.py  financial_embeddings.py
backend/src/vector_store/: vector_db.py
backend/tests/: run_robust_tests.py  run_tests.py
backend/tests/finance/: test_config.py  test_financial_analyzer_engine.py
backend/tests/finance/embeddings/: test_model.py  test_tokenization.py
backend/tests/integration/: test_financial_embeddings_integration.py  test_schema_compatibility.py
backend/tests/mocks/: mock_parser.py
backend/tests/utils/: dependency_checker.py
backend/tools/: explore_chroma.py  test_financial_chunking.py  validate_financial_chunks.py
docs/: README.md  advanced-financial-architecture.md  api-reference.md  causal-financial-reasoning.md  developer-guide.md  financial-document-processing.md  financial-retrieval-system.md  financial-statement-analyzer.md  financial_document_processing_journey.md  getting-started.md  implementation-guide.md  llm-integration.md
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: file-queue.tsx  file-uploader.tsx  page-header.tsx
frontend/src/components/ui/: badge.tsx  progress.tsx  sidebar.tsx
frontend/src/hooks/: use-toast.ts
